--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 .pnp.js
 .yarn/install-state.gz
 
+env
+
 # testing
 /coverage
 
@@ -25,9 +27,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
+.env*
 
+# local env files
+.env.local
 # vercel
 .vercel
 
