--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
+    "jose": "^5.6.3",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "next-i18next": "^15.3.0",
     "react": "^18",
     "react-dom": "^18",
