--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "deepl": "^1.0.13",
+    "deepl-node": "^1.13.0",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
     "jose": "^5.6.3",
+    "jsdom": "^24.1.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "next-i18next": "^15.3.0",
@@ -24,6 +27,7 @@
     "react-i18next": "^14.1.2"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
