--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deepl-node": "^1.13.0",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
+    "git-filter-repo": "^0.0.30",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
